# cppconfiguration

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cppconfiguration/: CMakeLists.txt
cppconfiguration/include/cppconfiguration/: configuration_builder.h  configuration_root.h  configuration_section.h  option.h
cppconfiguration/src/: configuration_builder.cpp  configuration_root.cpp  configuration_section.cpp
example/: CMakeLists.txt  appsettings.json  main.cpp
tests/: CMakeLists.txt  appsettings.json
tests/src/: configuration_builder.tests.cpp
